--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "build": "tsc",
+    "build": "tsc && cp -r src/views dist/views && cp -r src/public dist/public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
